--- a/admin_login.html
+++ b/admin_login.html
@@ -4,45 +4,143 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login</title>
+    <!-- Since we cannot use Tailwind CSS directly in a static HTML file without a build step, 
+         we will use a CDN for a similar look and feel, and try to mimic the original component's structure. 
+         The original component uses shadcn/ui components (Card, Input, Button, Label) which are styled with Tailwind.
+         We will use a simple Tailwind CDN for the utility classes. -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body { font-family: sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; background-color: #f4f4f4; }
-        .login-container { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); width: 300px; }
-        h2 { text-align: center; color: #333; }
-        input[type="text"], input[type="password"] { width: 100%; padding: 10px; margin: 8px 0 16px 0; display: inline-block; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box; }
-        button { background-color: #4CAF50; color: white; padding: 14px 20px; margin: 8px 0; border: none; border-radius: 4px; cursor: pointer; width: 100%; }
-        button:hover { opacity: 0.8; }
-        .message { text-align: center; margin-top: 10px; color: red; }
+        /* Mimic the Poppins font used in the original project */
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+        body {
+            font-family: 'Poppins', sans-serif;
+        }
+        /* Mimic the dark/light theme background */
+        .bg-gray-50 {
+            background-color: #f9fafb; /* Light mode background */
+        }
+        .dark\:bg-gray-900 {
+            /* Not fully supported without a theme toggle, but we'll stick to light mode for simplicity */
+        }
+        /* Mimic the Card component styling */
+        .card {
+            background-color: white;
+            border-radius: 0.5rem; /* rounded-xl */
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); /* shadow-xl */
+            border: 1px solid #e5e7eb; /* border-gray-200 */
+        }
+        .card-header {
+            padding: 1.5rem;
+            border-bottom: 1px solid #e5e7eb;
+        }
+        .card-content {
+            padding: 1.5rem;
+        }
+        /* Mimic the Input component styling */
+        .input {
+            display: block;
+            width: 100%;
+            padding: 0.625rem 1rem;
+            font-size: 1rem;
+            line-height: 1.5;
+            color: #1f2937;
+            background-color: #ffffff;
+            background-clip: padding-box;
+            border: 1px solid #d1d5db; /* border-gray-300 */
+            border-radius: 0.375rem; /* rounded-md */
+            transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+        }
+        .input:focus {
+            border-color: #3b82f6; /* ring-blue-500 */
+            outline: 0;
+            box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.5);
+        }
+        /* Mimic the Button component styling (primary) */
+        .button-primary {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0.625rem 1.25rem;
+            font-size: 1rem;
+            font-weight: 600;
+            line-height: 1.5;
+            border-radius: 0.375rem;
+            color: #ffffff;
+            background-color: #2563eb; /* bg-blue-600 */
+            border: 1px solid transparent;
+            transition: background-color 0.15s ease-in-out;
+        }
+        .button-primary:hover {
+            background-color: #1d4ed8; /* hover:bg-blue-700 */
+        }
+        .button-primary:disabled {
+            opacity: 0.6;
+            cursor: not-allowed;
+        }
+        .text-muted-foreground {
+            color: #6b7280; /* gray-500 */
+        }
     </style>
 </head>
-<body>
-    <div class="login-container">
-        <h2>Admin Login</h2>
-        <form id="loginForm">
-            <label for="username"><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="username" id="username" required>
-
-            <label for="password"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="password" id="password" required>
-
-            <button type="submit">Login</button>
-            <p id="message" class="message"></p>
-        </form>
+<body class="bg-gray-50">
+    <div class="flex items-center justify-center min-h-screen">
+        <div class="w-full max-w-md card">
+            <div class="card-header">
+                <h2 class="text-2xl font-semibold text-center">Admin Login</h2>
+            </div>
+            <div class="card-content">
+                <form id="loginForm" class="grid gap-4">
+                    <div class="grid gap-2">
+                        <label for="username" class="text-sm font-medium leading-none">Username</label>
+                        <input
+                            id="username"
+                            type="text"
+                            placeholder="admin"
+                            required
+                            class="input"
+                        />
+                    </div>
+                    <div class="grid gap-2">
+                        <label for="password" class="text-sm font-medium leading-none">Password</label>
+                        <input
+                            id="password"
+                            type="password"
+                            placeholder="password"
+                            required
+                            class="input"
+                        />
+                    </div>
+                    <button type="submit" id="loginButton" class="button-primary w-full">
+                        Login
+                    </button>
+                    <p class="text-sm text-center text-muted-foreground mt-2">
+                        Default: admin / password
+                    </p>
+                    <p id="message" class="text-sm text-center mt-2"></p>
+                </form>
+            </div>
+        </div>
     </div>
 
     <script>
         const form = document.getElementById('loginForm');
         const messageElement = document.getElementById('message');
+        const loginButton = document.getElementById('loginButton');
+        const usernameInput = document.getElementById('username');
+        const passwordInput = document.getElementById('password');
         const backendUrl = window.location.origin; // The backend's own URL
 
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
-            messageElement.textContent = 'Logging in...';
+            loginButton.disabled = true;
+            loginButton.textContent = 'Logging in...';
+            messageElement.textContent = '';
 
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
+            const username = usernameInput.value;
+            const password = passwordInput.value;
 
             try {
-                // The admin login API is already at /api/admin/login
+                // The admin login API is at /api/admin/login
                 const response = await fetch(`${backendUrl}/api/admin/login`, {
                     method: 'POST',
                     headers: {
@@ -56,10 +154,24 @@
                 if (response.ok) {
                     messageElement.textContent = 'Login successful! Redirecting to dashboard...';
                     messageElement.style.color = 'green';
-                    // In a real app, you'd get a token and redirect to a dashboard.
-                    // For this simple fix, we'll just show a success message.
-                    // To simulate a dashboard, we'll replace the form with a simple message.
-                    document.body.innerHTML = '<div class="login-container"><h2>Admin Dashboard</h2><p>Welcome, Admin! You are logged in.</p><p>You can now manage your content.</p><p><a href="https://school-frontend-opal.vercel.app/">Go back to Frontend</a></p></div>';
+                    
+                    // Simulate a dashboard view
+                    document.body.innerHTML = \`
+                        <div class="flex items-center justify-center min-h-screen">
+                            <div class="w-full max-w-md card">
+                                <div class="card-header">
+                                    <h2 class="text-2xl font-semibold text-center">Admin Dashboard</h2>
+                                </div>
+                                <div class="card-content">
+                                    <p class="text-center">Selamat datang, Admin! Anda berhasil masuk.</p>
+                                    <p class="text-center mt-2">Anda sekarang dapat mengelola konten Anda.</p>
+                                    <p class="text-center mt-4">
+                                        <a href="https://school-frontend-opal.vercel.app/" class="button-primary">Kembali ke Halaman Utama Frontend</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    \`;
                 } else {
                     messageElement.textContent = data.message || 'Login failed. Check your credentials.';
                     messageElement.style.color = 'red';
@@ -68,6 +180,9 @@
                 messageElement.textContent = 'An error occurred during login.';
                 messageElement.style.color = 'red';
                 console.error('Login error:', error);
+            } finally {
+                loginButton.disabled = false;
+                loginButton.textContent = 'Login';
             }
         });
     </script>
