--- a/ArticleCreation.html
+++ b/ArticleCreation.html
@@ -6,11 +6,12 @@
     <title>Create New Article</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        /* Custom styles to match the school-original design */
+        /* Custom styles to match the school-original design (Shadcn/Tailwind-based) */
         .card {
             background-color: #ffffff;
             border-radius: 0.5rem;
             box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+            border: 1px solid #e5e7eb; /* Added border for card */
         }
         .card-header {
             padding: 1.5rem;
@@ -34,8 +35,8 @@
         }
         .input, .textarea, .select-trigger {
             width: 100%;
-            padding: 0.75rem 1rem;
-            border: 1px solid #d1d5db;
+            padding: 0.625rem 0.75rem; /* Adjusted padding to match Shadcn input */
+            border: 1px solid #e5e7eb; /* Adjusted border color */
             border-radius: 0.375rem;
             font-size: 1rem;
             color: #1f2937;
@@ -44,10 +45,10 @@
         .input:focus, .textarea:focus, .select-trigger:focus {
             border-color: #3b82f6;
             outline: 0;
-            box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.5);
+            box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.25); /* Adjusted focus ring */
         }
         .button {
-            padding: 0.75rem 1rem;
+            padding: 0.625rem 1rem; /* Adjusted padding to match Shadcn button */
             font-size: 1rem;
             font-weight: 600;
             color: #ffffff;
@@ -56,8 +57,15 @@
             transition: background-color 0.15s ease-in-out;
             cursor: pointer;
         }
+        .button:hover {
+            background-color: #2563eb;
+        }
+        .button:disabled {
+            background-color: #9ca3af;
+            cursor: not-allowed;
+        }
         .button-outline {
-            padding: 0.75rem 1rem;
+            padding: 0.625rem 1rem;
             font-size: 1rem;
             font-weight: 600;
             color: #1f2937;
@@ -67,16 +75,10 @@
             transition: background-color 0.15s ease-in-out;
             cursor: pointer;
         }
-        .button:hover {
-            background-color: #2563eb;
-        }
         .button-outline:hover {
             background-color: #f3f4f6;
         }
-        .button:disabled {
-            background-color: #9ca3af;
-            cursor: not-allowed;
-        }
+        /* Toast styles (kept from original for functionality) */
         .toast-success {
             background-color: #10b981;
             color: white;
@@ -134,6 +136,7 @@
                     </div>
                     <div class="grid gap-2">
                         <label for="category" class="label">Category</label>
+                        <!-- Simple select element to mimic the Select component -->
                         <select id="category" class="input">
                             <option value="student">Student</option>
                             <option value="teacher">Teacher</option>
@@ -146,7 +149,7 @@
                             placeholder="Article Content (Markdown supported)"
                             required
                             rows="10"
-                            class="textarea"
+                            class="textarea input"
                         ></textarea>
                     </div>
                     <div class="grid gap-2">
@@ -187,8 +190,10 @@
         }
 
         function checkAuth() {
+            // Check for authentication flag in sessionStorage
             if (sessionStorage.getItem("isAdminAuthenticated") !== "true") {
-                window.location.href = "/"; // Redirect to login page (which is now the root)
+                // Redirect to the login page (which is the root path in this simple backend setup)
+                window.location.href = "/"; 
             }
         }
 
